--- a/Examples/AnimatedGradient/package.json
+++ b/Examples/AnimatedGradient/package.json
@@ -7,8 +7,8 @@
 		"test": "jest"
 	},
 	"dependencies": {
-    "react": "16.0.0-alpha.6",
-    "react-native": "^0.44.0",
+		"react": "16.0.0",
+		"react-native": "0.51.0",
 		"react-native-linear-gradient": "file:../.."
 	},
 	"devDependencies": {
